--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </div>
     </div>
 
-    <!-- ไฟล์เสียง (เอามาวางไว้ root เดียวกับ index.html) -->
+    <!-- ไฟล์เสียง (ต้องอยู่โฟลเดอร์เดียวกับ index.html) -->
     <audio id="audioTH" src="voice_th.mp3"></audio>
     <audio id="audioEN" src="voice_en.mp3"></audio>
 
@@ -70,19 +70,41 @@
     >
       <!-- Marker HIRO -->
       <a-marker preset="hiro">
-        <!-- โมเดลกระต่าย + animation ขยับตัว -->
+        <!-- โมเดลกระต่าย + animation -->
         <a-entity
           id="rabbit"
           gltf-model="url(Easter_rabbit.glb)"
           position="0 0 0"
           rotation="0 180 0"
           scale="2 2 2"
-          animation="property: position;
-                     dir: alternate;
-                     dur: 2000;
-                     easing: easeInOutSine;
-                     loop: true;
-                     to: 0 0.35 0"
+
+          <!-- idle: เด้งเบา ๆ ตลอดเวลา -->
+          animation__idle="property: position;
+                           dir: alternate;
+                           dur: 1500;
+                           easing: easeInOutSine;
+                           loop: true;
+                           to: 0 0.3 0"
+
+          <!-- talkjump: เด้งแรงขึ้นตอนเล่า -->
+          animation__talkjump="property: position;
+                               startEvents: talk-start;
+                               pauseEvents: talk-stop;
+                               dir: alternate;
+                               dur: 600;
+                               easing: easeInOutSine;
+                               loop: true;
+                               to: 0 0.7 0"
+
+          <!-- talkrotate: หันตัวซ้าย-ขวาตอนเล่า -->
+          animation__talkrotate="property: rotation;
+                                 startEvents: talk-start;
+                                 pauseEvents: talk-stop;
+                                 dir: alternate;
+                                 dur: 900;
+                                 easing: easeInOutSine;
+                                 loop: true;
+                                 to: 0 220 0"
         >
         </a-entity>
       </a-marker>
@@ -94,16 +116,21 @@
     <script>
       const audioTH = document.getElementById("audioTH");
       const audioEN = document.getElementById("audioEN");
+      const rabbit  = document.getElementById("rabbit");
 
       function stopAll() {
         [audioTH, audioEN].forEach(a => {
           a.pause();
           a.currentTime = 0;
         });
+        // หยุดท่าพูด (กลับสู่ idle อย่างเดียว)
+        rabbit.emit("talk-stop");
       }
 
       function playTH() {
         stopAll();
+        // เริ่มท่าพูด
+        rabbit.emit("talk-start");
         audioTH.play().catch(err => {
           console.log("Cannot play TH audio:", err);
         });
@@ -111,10 +138,15 @@
 
       function playEN() {
         stopAll();
+        rabbit.emit("talk-start");
         audioEN.play().catch(err => {
           console.log("Cannot play EN audio:", err);
         });
       }
+
+      // เมื่อเสียงจบให้หยุดท่าพูดเอง
+      audioTH.addEventListener("ended", () => rabbit.emit("talk-stop"));
+      audioEN.addEventListener("ended", () => rabbit.emit("talk-stop"));
     </script>
   </body>
 </html>
